--- a/frontend/css/animations.css
+++ b/frontend/css/animations.css
@@ -1,18 +1,18 @@
 /* Change Status */
 #change-status {
-    padding: 0.6em 2em;
-    margin: 1.2em 4em;
+    background-color: var(--first-level-background-color);
+    border-radius: .8rem;
     border: none;
-    outline: none;
     color: var(--font-color);
-    background: #222;
     cursor: pointer;
+    margin: 1.2em 4em;
+    outline: none;
+    padding: 0.6em 2em;
     position: relative;
-    z-index: 0;
-    border-radius: 10px;
+    touch-action: manipulation;
     user-select: none;
     -webkit-user-select: none;
-    touch-action: manipulation;
+    z-index: 0;
 }
 
 #change-status:hover::after {
@@ -36,13 +36,13 @@
     left: -2px;
     background-size: 400%;
     z-index: -1;
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
+    filter: blur(.3rem);
+    -webkit-filter: blur(.3rem);
+    width: calc(100% + .3rem);
+    height: calc(100% + .3rem);
     animation: glowing-change-status 20s linear infinite;
     transition: opacity 0.3s ease-in-out;
-    border-radius: 10px;
+    border-radius: .8rem;
 }
 
 @keyframes glowing-change-status {
@@ -61,7 +61,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background-color: var(--first-level-background-color);
     left: 0;
     top: 0;
     border-radius: 10px;
@@ -95,7 +95,7 @@
 #main-menu-button>span {
     width: 100%;
     height: 3px;
-    background-color: var(--menu-button-color);
+    background-color: var(--font-color);
     transition-duration: var(--default-transition);
 }
 
@@ -108,7 +108,6 @@ nav #main-menu-button.activated:hover>span {
 
 #main-menu-button.activated>span {
     transition-duration: var(--default-transition);
-    background-color: black;
 }
 
 @keyframes activate-top-spin {
