--- a/frontend/css/animations.css
+++ b/frontend/css/animations.css
@@ -83,9 +83,9 @@
     position: absolute;
     top: 1vh;
     right: 2vw;
-    height: 30px;
-    width: 30px;
-    padding: 10px;
+    height: 3.125rem;
+    width: 3.125rem;
+    padding: 0.625rem;
     cursor: pointer;
     overflow: hidden;
     z-index: 1001;
@@ -94,7 +94,7 @@
 
 #main-menu-button>span {
     width: 100%;
-    height: 3px;
+    height: 0.1875rem;
     background-color: var(--font-color);
     transition-duration: var(--default-transition);
 }
@@ -112,15 +112,15 @@ nav #main-menu-button.activated:hover>span {
 
 @keyframes activate-top-spin {
     0% {
-        transform: translateY(0px) rotate(0deg);
+        transform: translateY(0rem) rotate(0deg);
     }
 
     20% {
-        transform: translateY(12px) rotate(45deg);
+        transform: translateY(.75rem) rotate(45deg);
     }
 
     100% {
-        transform: translateY(12px) rotate(-135deg);
+        transform: translateY(.75rem) rotate(-135deg);
     }
 }
 
@@ -140,15 +140,15 @@ nav #main-menu-button.activated:hover>span {
 
 @keyframes activate-bottom-spin {
     0% {
-        transform: translateY(0px) rotate(0deg);
+        transform: translateY(0rem) rotate(0deg);
     }
 
     20% {
-        transform: translateY(-15px) rotate(-45deg);
+        transform: translateY(-0.9375rem) rotate(-45deg);
     }
 
     100% {
-        transform: translateY(-15px) rotate(135deg);
+        transform: translateY(-0.9375rem) rotate(135deg);
     }
 }
 
@@ -161,7 +161,7 @@ nav #main-menu-button.activated:hover>span {
 
 #main-menu-button.activated>span:nth-child(1) {
     animation-name: activate-top-spin;
-    transform: translateY(12px) rotate(45deg);
+    transform: translateY(.75rem) rotate(45deg);
 }
 
 #main-menu-button.activated>span:nth-child(2) {
@@ -172,27 +172,23 @@ nav #main-menu-button.activated:hover>span {
 
 #main-menu-button.activated>span:nth-child(3) {
     animation-name: activate-bottom-spin;
-    transform: translateY(-15px) rotate(-45deg);
+    transform: translateY(-0.9375rem) rotate(-45deg);
 }
-
-
-
 
 @keyframes deactivated-top-spin {
     0% {
-        transform: translateY(12px) rotate(-135deg);
+        transform: translateY(.75rem) rotate(-135deg);
     }
 
     75% {
-        transform: translateY(12px) rotate(45deg);
+        transform: translateY(.75rem) rotate(45deg);
     }
 
     100% {
-        transform: translateY(0px) rotate(0deg);
+        transform: translateY(0rem) rotate(0deg);
     }
 
 }
-
 
 @keyframes deactivated-middle-fade {
     0% {
@@ -211,22 +207,21 @@ nav #main-menu-button.activated:hover>span {
 
 @keyframes deactivated-bottom-spin {
     0% {
-        transform: translateY(-15px) rotate(135deg);
+        transform: translateY(-0.9375rem) rotate(135deg);
     }
 
     75% {
-        transform: translateY(-15px) rotate(-45deg);
+        transform: translateY(-0.9375rem) rotate(-45deg);
     }
 
     100% {
-        transform: translateY(0px) rotate(0deg);
+        transform: translateY(0rem) rotate(0deg);
     }
 }
 
-
 #main-menu-button>span:nth-child(1) {
     animation-name: deactivated-top-spin;
-    transform: translateY(0px) rotate(0deg);
+    transform: translateY(0rem) rotate(0deg);
 }
 
 #main-menu-button>span:nth-child(2) {
@@ -237,7 +232,7 @@ nav #main-menu-button.activated:hover>span {
 
 #main-menu-button>span:nth-child(3) {
     animation-name: deactivated-bottom-spin;
-    transform: translateY(0px) rotate(0deg);
+    transform: translateY(0rem) rotate(0deg);
 }
 
 /* End of Main Menu */
