* Some mobile styling * General UI/UX fixes.
Signed-off-by: Jadin Heaston <86203688+JadinHeaston@users.noreply.github.com>

--- a/frontend/css/mobile.css
+++ b/frontend/css/mobile.css
@@ -1,9 +1,22 @@
 /* Mobile-ish */
 @media (max-width: 50rem) {
-    #time-card-container {
-        flex-direction: column;
+    body {
+        max-height: unset;
     }
 
+    main {
+        justify-content: space-evenly;
+    }
+
+    #time-card-container {
+        position: static;
+    }
+    
+    #status-container {
+        flex-grow: 1;
+        top: 50vh;
+        left: 50vw;
+    }
 
     #log-container {
         display: none;
