--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -136,15 +136,15 @@ nav {
 	position: fixed;
 	width: 100%;
 }
-nav > * {
+nav > *:not(#main-menu) {
 	margin: .5rem;
 }
 
 nav #main-menu {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: -10;
+	z-index: -1000;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
@@ -351,6 +351,7 @@ main {
 	align-items: center;
 	justify-content: center;
 	height: 100%;
+	z-index: -1000;
 }
 
 #status-container {
@@ -420,6 +421,7 @@ main {
 	pointer-events: all;
 	width: 8rem;
 	margin: .3rem;
+	z-index: -1000;
 }
 
 #time-card-container>.time-card>p {
@@ -518,6 +520,7 @@ main {
 	padding: 1rem;
 	position: absolute;
 	width: calc(100% - 2rem - .2rem);
+	z-index: -1000;
 }
 
 #log-container>h2 {
